--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joblisting",
   "version": "1.0.0",
-  "description": "A dynamic job listing platform built with the MERN stack. Features include secure user authentication, easy job posting for employers, and a streamlined application process for job seekers. Real-time updates and responsive design ensure a seamless user experience.",
+  "description": "This project builds a job listing platform using the MERN stack. The backend, powered by Node.js and Express, handles MongoDB data storage and user authentication. React on the frontend ensures a responsive interface with features like job listing displays and application forms.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,10 +13,11 @@
     "url": "git+https://github.com/Princeroy67/JobListing.git"
   },
   "keywords": [
-    "React.js",
     "Node.js",
-    "Express.js",
-    "MongoDB"
+    "Express",
+    "MongoDB",
+    "Mongoose",
+    "React."
   ],
   "author": "Prince",
   "license": "ISC",
@@ -26,12 +27,11 @@
   "homepage": "https://github.com/Princeroy67/JobListing#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.4.0",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0"
-  },
-  "devDependencies": {
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
 }
